--- a/package.json
+++ b/package.json
@@ -23,12 +23,10 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^2.0.0-0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^7.0.0-0",
+    "eslint": "7.20.0",
+    "eslint-config-google": "0.14.0",
+    "eslint-plugin-vue": "7.6.0",
+    "eslint-plugin-vue-scoped-css": "1.1.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
@@ -41,23 +39,88 @@
     },
     "extends": [
       "plugin:vue/vue3-essential",
-      "@vue/standard"
+      "plugin:vue-scoped-css/vue3-recommended",
+      "eslint:recommended",
+      "google"
     ],
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {},
+    "rules": {
+      "vue/this-in-template": [
+        "error",
+        "never"
+      ],
+      "vue/require-explicit-emits": [
+        "warn",
+        {
+          "allowProps": true
+        }
+      ],
+      "max-len": [
+        "error",
+        {
+          "code": 400
+        }
+      ],
+      "new-cap": "off",
+      "no-invalid-this": "off",
+      "no-extend-native": "off",
+      "prefer-promise-reject-errors": "off",
+      "no-throw-literal": "off",
+      "prefer-rest-params": "off",
+      "guard-for-in": "off",
+      "camelcase": "off",
+      "require-jsdoc": "off",
+      "indent": [
+        "error",
+        2,
+        {
+          "CallExpression": {
+            "arguments": 2
+          },
+          "FunctionDeclaration": {
+            "body": 1,
+            "parameters": 2
+          },
+          "FunctionExpression": {
+            "body": 1,
+            "parameters": 2
+          },
+          "MemberExpression": 1,
+          "ObjectExpression": 1,
+          "SwitchCase": 1,
+          "ignoredNodes": [
+            "ConditionalExpression"
+          ]
+        }
+      ],
+      "vue/script-indent": [
+        "error",
+        2,
+        {
+          "baseIndent": 1
+        }
+      ],
+      "vue/html-indent": [
+        "error",
+        2
+      ],
+      "vue-scoped-css/require-scoped": "off"
+    },
     "overrides": [
       {
         "files": [
-          "**/__tests__/*.{j,t}s?(x)",
-          "**/tests/unit/**/*.spec.{j,t}s?(x)"
+          "*.vue"
         ],
-        "env": {
-          "jest": true
+        "rules": {
+          "indent": "off"
         }
       }
-    ]
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
   },
   "browserslist": [
     "> 1%",
