--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve:prod": "npm run build && cd dist && npm install -g static-server && static-server",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "core-js": "^3.6.5",
+    "cypress": "^6.8.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -117,10 +119,7 @@
           "indent": "off"
         }
       }
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
+    ]
   },
   "browserslist": [
     "> 1%",
