--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^2.0.0-0",
     "babel-eslint": "^10.1.0",
+    "core-js": "^3.6.5",
     "eslint": "7.20.0",
     "eslint-config-google": "0.14.0",
     "eslint-plugin-vue": "7.6.0",
