--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vue/test-utils": "^2.0.0-0",
     "babel-eslint": "^10.1.0",
     "core-js": "^3.6.5",
+    "cypress": "^7.0.0",
     "eslint": "7.20.0",
     "eslint-config-google": "0.14.0",
     "eslint-plugin-vue": "7.6.0",
